--- a/pod-replicaset.yml
+++ b/pod-replicaset.yml
@@ -15,3 +15,22 @@ spec:
       containers:
         - name: nginx
           image: nginx
+---
+
+apiVersion: apps/v1
+kind: Deployement
+metadata:
+  name: deploy-1
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      tier: rs-1
+  template:
+    metadata:
+      labels:
+        tier: rs-1
+    spec:
+      containers:
+        - name: nginx
+          image: nginx
